--- a/kubernetes/backend.yaml
+++ b/kubernetes/backend.yaml
@@ -1,3 +1,12 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: secrets
+type: Opaque
+stringData:
+  db-password: |-
+    password
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,7 +25,23 @@ spec:
     spec:
       containers:
       - name: backend
-        image: sasnovacat08/sasnovacat08-backend
+        image: mygoapp:1.9
+        ports:
+        - containerPort: 8000
+        env:
+        - name: DB_URL
+          value: mysql.default.svc.cluster.local
+        volumeMounts:
+        - mountPath: /var/run/secrets/
+          name: secrets
+          readOnly: true
+      volumes:
+      - name: secrets
+        secret:
+          secretName: secrets
+          items:
+          - key: db-password
+            path: db-password
 ---
 apiVersion: v1
 kind: Service
@@ -27,7 +52,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - port: 8080
-    targetPort: 8080
+  - port: 8000
+    targetPort: 8000
   selector:
     app: backend
