--- a/kubernetes/nginx.yaml
+++ b/kubernetes/nginx.yaml
@@ -19,8 +19,7 @@ spec:
         - containerPort: 80
         volumeMounts:
         - name: nginx-conf
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
+          mountPath: /etc/nginx/conf.d
       volumes:
       - name: nginx-conf
         configMap:
@@ -36,10 +35,8 @@ metadata:
   labels:
     run: nginx
 spec:
-  type: NodePort
   ports:
   - port: 80
-    targetPort: 80
     protocol: TCP
   selector:
     run: nginx
@@ -54,7 +51,7 @@ data:
         listen       80;
         server_name  localhost;
         location / {
-            proxy_pass          http://backend:8000;
+            proxy_pass          http://backend.default.svc.cluster.local:8000;
             proxy_http_version  1.1;
         }
     }
